--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "@google-cloud/storage": "^5.8.3",
+    "express": "^4.17.1",
+    "multer": "^1.4.2"
   }
 }
